(gn) #39934 actual fix for menu alignment

--- a/web-ui/src/main/resources/catalog/style/gn.less
+++ b/web-ui/src/main/resources/catalog/style/gn.less
@@ -674,6 +674,9 @@ button, .btn, .btn:active, a {
   &.popover-dropdown-5 .popover-content {
     height: 15.5em;
   }
+  &.popover-dropdown-6 .popover-content {
+    height: 18em;
+  }
   .popover-content > .dropdown-menu {
     position: static;
     box-shadow: none;
